Fix unneccessary scrollbar

--- a/app/assets/css/global/_body.scss
+++ b/app/assets/css/global/_body.scss
@@ -1,5 +1,5 @@
 body, html {
-    padding: 0;
+    padding: 20px;
     margin: 0;
     background: aliceblue;
     color: black;
