--- a/app/assets/css/partials/_container.scss
+++ b/app/assets/css/partials/_container.scss
@@ -1,5 +1,5 @@
 .container {
-    margin: 20px auto;
+    margin: 0 auto;
     width: 90%;
     max-width: 700px;
     background: white;
