--- a/app/assets/css/styles.css
+++ b/app/assets/css/styles.css
@@ -1,5 +1,5 @@
 body, html {
-  padding: 0;
+  padding: 20px;
   margin: 0;
   background: aliceblue;
   color: black;
@@ -10,7 +10,7 @@ body, html {
   box-sizing: border-box; }
 
 .container {
-  margin: 20px auto;
+  margin: 0 auto;
   width: 90%;
   max-width: 700px;
   background: white;
